external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_enum.ide.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/ide_mode/missing_match_enum.move:2:3
  │
1 │ #[allow(ide_path_autocomplete)]
  │   ----- Attribute previously given here
2 │ #[allow(ide_dot_autocomplete)]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'allow' attached to the same item

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/ide_mode/missing_match_enum.move:11:16
   │
11 │         match (e) {
   │                ^ Pattern '_' not covered

note[I15004]: IDE missing match arms
   ┌─ tests/move_2024/ide_mode/missing_match_enum.move:11:19
   │  
11 │           match (e) {
   │ ╭───────────────────^
12 │ │         }
   │ ╰─────────^ Missing arms: '0x42::m::E::One', '0x42::m::E::Two(_)', and '0x42::m::E::Three { x }'

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/ide_mode/missing_match_enum.move:16:16
   │
16 │         match (e) {
   │                ^ Pattern 'E::One' not covered

note[I15004]: IDE missing match arms
   ┌─ tests/move_2024/ide_mode/missing_match_enum.move:16:19
   │  
16 │           match (e) {
   │ ╭───────────────────^
17 │ │             E::Two(n) => *n
18 │ │         }
   │ ╰─────────^ Missing arms: '0x42::m::E::One' and '0x42::m::E::Three { x }'

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/ide_mode/missing_match_enum.move:22:16
   │
22 │         match (e) {
   │                ^ Pattern 'E::Three { x: _ }' not covered

note[I15004]: IDE missing match arms
   ┌─ tests/move_2024/ide_mode/missing_match_enum.move:22:19
   │  
22 │           match (e) {
   │ ╭───────────────────^
23 │ │             E::One => 0,
24 │ │             E::Two(n) => *n
25 │ │         }
   │ ╰─────────^ Missing arms: '0x42::m::E::Three { x }'

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/ide_mode/missing_match_enum.move:29:16
   │
29 │         match (e) {
   │                ^ Pattern 'E::One' not covered

note[I15004]: IDE missing match arms
   ┌─ tests/move_2024/ide_mode/missing_match_enum.move:29:19
   │  
29 │           match (e) {
   │ ╭───────────────────^
30 │ │             E::Three { x } => *x,
31 │ │             E::Two(n) => *n
32 │ │         }
   │ ╰─────────^ Missing arms: '0x42::m::E::One'

